<resources>
    <string name="app_name">Lockee</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="register"><b>Create an account</b></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="own_code"><b>I have a code</b></string>
    <string name="terms">I agree to the terms and conditions</string>
    <string name="registerWelcome">Create an account</string>
    <string name="registerButton">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="wrongLogin"><b>Login information is wrong</b></string>
    <string name="correctRegister"><b>Account successfully registered</b></string>
    <string name="wrongRegister"><b>Register information is wrong</b></string>
    <string name="hint_confirmpassword">Confirm password</string>
    <string name="hint_name">Full name</string>
    <string name="termsNotChecked">Please accept the terms and conditions</string>
    <string name="confirmPasswordWrong">Please confirm the password</string>
    <string name="doubleRegister">An account with this email already exists</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="addlock">Add a lock</string>
    <string name="about">About</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="remove">Remove</string>
    <string name="dismiss">Dismiss</string>
    <string name="options_menu">Options menu</string>
    <string name="register_successful">You have successfully created\n an account</string>
    <string name="switchButton">switch</string>
    <string name="maintenance">We couldn\'t establish a connection with the server\nPlease check your wifi / data service and try again</string>
    <string name="nolocks">You have no locks associated\n with this account</string>
    <string name="registerGuide">Tap this button to add a lock</string>
    <string name="about_info">This app is a part of our IoT project designed for mobile access to our server, database and remote control of Arduino.</string>
    <string name="about_credits">Glimpse Team\nFor IT 2016 Edition</string>
    <string name="session_expire">This session ID expires on:</string>
	<string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>
