<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:title=""
        android:id="@+id/empty"
        android:orderInCategory="101"
        android:icon="@drawable/overflow"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:title="@string/about"
                android:icon="@drawable/ic_about_black_48dp"/>
            <item
                android:id="@+id/menu_sync"
                android:title="@string/sync"
                android:icon="@drawable/ic_sync_black_48dp"/>
            <item
                android:id="@+id/menu_settings"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_48dp"/>
            <item
                android:id="@+id/menu_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout_black_48dp"/>
        </menu>
    </item>

</menu>