<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="3"
    android:onClick="onReleaseFocus"
    android:id="@+id/linearLayout">

    <LinearLayout
        android:id="@+id/dummy_id"
        android:orientation="vertical"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:textIsSelectable="false"
            android:id="@+id/welcomeText"
            android:textStyle="bold"
            android:textSize="32sp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/loginError"
            android:textColor="@color/error"
            android:layout_marginEnd="25dp"
            android:textStyle="italic"
            android:layout_gravity="right" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:textColorHint="@color/input_login_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/emailError"
            android:textColor="@color/error"
            android:layout_marginStart="25dp"
            android:layout_gravity="left"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="3dp"
            android:textColorHint="@color/input_login_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/own_code"
                android:textColor="@color/colorAccent"
                android:textIsSelectable="false"
                android:id="@+id/guest"
                android:clickable="true"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textIsSelectable="false"
                android:id="@+id/register"
                android:gravity="right"
                android:clickable="true"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:gravity="center">

        <Button
            android:layout_width="96dp"
            android:layout_height="42dp"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:id="@+id/sign_in"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style"
            android:onClick="onLogin"/>

    </LinearLayout>

</LinearLayout>
